[package]
name = "download-exchange-rates"
version = "0.1.1"
authors = ["Maksim Kudrautsau <maksim.kudrautsau@itechart-group.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.10", features = ["rustls-tls"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
clap = "2.33"
chrono = "0.4"

# Optimize for size.
[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = true
